Fix view more + arrows not fitting on mobile. Change input font-size to 16 to prevent ios zoom on select

--- a/src/components/common/input-form/input-form.module.scss
+++ b/src/components/common/input-form/input-form.module.scss
@@ -10,6 +10,7 @@
   }
 
   input {
+    @include fonts-md-fixed;
     width: 100%;
     padding-left: $gaps-gap-2;
     padding-right: $gaps-gap-3;
